# Auto-Installer-for-Pixel-MK-3

./: .gitattributes  .gitignore  Auto-Installer for Pixel MK 3.sln  Auto-Installer for Pixel MK 3.vcxproj  Auto-Installer for Pixel MK 3.vcxproj.filters  Auto-Installer-for-Pixel-MK-3.desktop.in  Auto-Installer_for_Pixel_MK_3.rc  CMakeLists.txt  Config.h  Config.h.in  README.md  imgui.ini  resource.h
Debug/: Auto-Installer for Pixel MK 3.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Auto-Ins.8B4BAC06.tlog/: Auto-Installer for Pixel MK 3.lastbuildstate  Auto-Installer for Pixel MK 3.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/Boost/: libboost_atomic-vc142-mt-s-x64-1_73.lib  libboost_chrono-vc142-mt-s-x32-1_73.lib  libboost_chrono-vc142-mt-s-x64-1_73.lib  libboost_chrono-vc142-mt-sgd-x32-1_73.lib  libboost_chrono-vc142-mt-sgd-x64-1_73.lib  libboost_container-vc142-mt-gd-x32-1_73.lib  libboost_container-vc142-mt-s-x64-1_73.lib  libboost_container-vc142-mt-sgd-x32-1_73.lib  libboost_context-vc142-mt-sgd-x32-1_73.lib  libboost_coroutine-vc142-mt-gd-x32-1_73.lib  libboost_coroutine-vc142-mt-s-x64-1_73.lib  libboost_date_time-vc142-mt-gd-x32-1_73.lib  libboost_date_time-vc142-mt-sgd-x32-1_73.lib  libboost_exception-vc142-mt-s-x64-1_73.lib  libboost_fiber-vc142-mt-s-x64-1_73.lib  libboost_filesystem-vc142-mt-s-x64-1_73.lib  libboost_iostreams-vc142-mt-sgd-x32-1_73.lib  libboost_math_c99-vc142-mt-sgd-x32-1_73.lib  libboost_math_c99f-vc142-mt-s-x64-1_73.lib  libboost_math_c99f-vc142-mt-sgd-x32-1_73.lib  libboost_math_c99f-vc142-mt-sgd-x64-1_73.lib  libboost_math_c99l-vc142-mt-s-x32-1_73.lib  libboost_nowide-vc142-mt-gd-x32-1_73.lib  libboost_nowide-vc142-mt-sgd-x32-1_73.lib  libboost_numpy36-vc142-mt-gd-x32-1_73.lib  libboost_numpy36-vc142-mt-s-x32-1_73.lib  libboost_numpy36-vc142-mt-sgd-x32-1_73.lib  libboost_prg_exec_monitor-vc142-mt-s-x32-1_73.lib  libboost_random-vc142-mt-s-x32-1_73.lib  libboost_stacktrace_noop-vc142-mt-s-x32-1_73.lib  libboost_stacktrace_windbg-vc142-mt-sgd-x32-1_73.lib  libboost_stacktrace_windbg_cached-vc142-mt-s-x32-1_73.lib  libboost_system-vc142-mt-s-x32-1_73.lib  libboost_system-vc142-mt-sgd-x32-1_73.lib  libboost_system-vc142-mt-sgd-x64-1_73.lib  libboost_thread-vc142-mt-sgd-x32-1_73.lib  libboost_timer-vc142-mt-gd-x32-1_73.lib  libboost_timer-vc142-mt-gd-x64-1_73.lib  libboost_type_erasure-vc142-mt-s-x32-1_73.lib
lib/Win32/Boost/: libboost_atomic-vc142-mt-gd-x64-1_73.lib  libboost_chrono-vc142-mt-gd-x32-1_73.lib  libboost_chrono-vc142-mt-gd-x64-1_73.lib  libboost_container-vc142-mt-gd-x64-1_73.lib  libboost_container-vc142-mt-s-x32-1_73.lib  libboost_container-vc142-mt-sgd-x64-1_73.lib  libboost_context-vc142-mt-gd-x32-1_73.lib  libboost_context-vc142-mt-gd-x64-1_73.lib  libboost_context-vc142-mt-s-x32-1_73.lib  libboost_context-vc142-mt-s-x64-1_73.lib  (+48 more)
src/: Source.cpp
src/headers/: CreateProfile.h  Downloader.h  ExtractZip.h  Font.h  ImFileBrowser.h  Image.h  Logger.h  Main.h  Mods.h  Progress Indicators.h  TextUrl.h
src/source/: CreateProfile.cpp  Downloader.cpp  ExtractZip.cpp  Logger.cpp  Main.cpp
src/vender/: zip.hpp
(+194 files in other folders)
